Fixed: Add versioning to NEED
Fixes #264

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -198,6 +198,12 @@
            specification, conforming applications will natively "understand" the underlying file structure without
            needing to first transition these contents to their own format.
          </p>
+        <p>
+          While digital objects are largely stable, there is also a need to track versions of these objects. These
+          versions may appear due to bitstream format shifts, preservation interventions to address corruption, or
+          to fix errors discovered after accessioning. The OCFL attempts to rationalize the file structures necessary
+          to capture versions of object contents so that previous states of an object may be recovered and examined.
+        </p>
     </section>
 </section>
 
