Fixed: Rationalize reference to OCFL
The sentence did not make sense if you read it while expanding the initialism.

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -193,7 +193,7 @@
            in support of the short-term, ephemeral software.
         </p>
         <p>
-           By providing a specification for the file and directory layout on disk or in an object store, OCFL is an
+           By providing a specification for the file and directory layout on disk or in an object store, the OCFL is an
            attempt at reducing, or even eliminating, the need for these transitions. As an application-independent
            specification, conforming applications will natively "understand" the underlying file structure without
            needing to first transition these contents to their own format.
