Be explicit that filename of inventory in sidecar is just filename

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -688,7 +688,7 @@
         <p>
             The digest sidecar file MUST contain the digest of the inventory file. This MUST follow the format
             <code>DIGEST inventory.json</code>; that is, the digest of the inventory file, a single space, and the
-            name of the inventory file.
+            string <code>inventory.json</code> which is the name of the inventory file in the same directory.
         </p>
         <p>
             The digest of the inventory MUST be computed only after all changes to the inventory have been made, so this
