Updated need based on review comments

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -199,10 +199,10 @@
           needing to first transition these contents to their own format.
          </p>
         <p>
-          While digital objects are largely stable, there is also a need to track versions of these objects. These
-          versions may appear due to bitstream format shifts, preservation interventions to address corruption, or
-          to fix errors discovered after accessioning. The OCFL attempts to rationalize the file structures necessary
-          to capture versions of object contents so that previous states of an object may be recovered and examined.
+          While digital repository content changes relatively slowly, it is necessary to be able to track changes to 
+          digital objects. Within the file and directory layout specification, OCFL provides a simple structure to 
+          efficiently capture versions of object contents so that all previous states of an object may be recovered
+          and examined.
         </p>
     </section>
 </section>
