Optional spec copy uses HTML example

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -311,7 +311,7 @@
             <pre>
             [storage_root]
                 ├── 0=ocfl_1.0
-                ├── ocfl_1.0.txt (optional OCFL spec)
+                ├── ocfl_1.0.html (optional copy of the OCFL specification)
                 ├── d45be626e024
                 |   ├── 0=ocfl_object_1.0
                 |   ├── inventory.json
@@ -342,7 +342,7 @@
             <pre>
             [storage_root]
                 ├── 0=ocfl_1.0
-                ├── ocfl_1.0.txt (optional OCFL spec)
+                ├── ocfl_1.0.html (optional copy of the OCFL specification)
                 ├── d4
                 |   └── 5b
                 |       └── e6
@@ -377,7 +377,7 @@
             <pre>
             [storage_root]
                 ├── 0=ocfl_1.0
-                ├── ocfl_1.0.txt (optional OCFL spec)
+                ├── ocfl_1.0.html (optional copy of the OCFL specification)
                 ├── d45
                 |   └── be6
                 |       └── 26e
