--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -747,11 +747,9 @@
           <a href="#root-conformance-declaration">Root Conformance Declaration</a> identifying it as such.
         </p>
         <p>
-          An OCFL Storage Root SHOULD also contain the OCFL specification in human-readable plain-text format
-          in the root.
-        </p>
-        <p>
-          An OCFL Storage Root MAY contain files used by <a href="#root-extensions">storage root extensions</a>.
+          An OCFL Storage Root MAY contain other files. These might include a human-readable copy of the OCFL
+          specification to make the storage root self-documenting, or files used by <a href="#root-extensions">storage
+          root extensions</a>.
         </p>
         <p>
           Sub-directories within a storage root MUST NOT contain files that are not part of an OCFL Object. Empty
@@ -767,7 +765,7 @@
         <pre>
 [storage_root]
     ├── 0=ocfl_1.0
-    └── ocfl_1.0.txt (human-readable text of the OCFL specification; optional)
+    └── ocfl_1.0.html  (optional human-readable copy of the OCFL specification)
         </pre>
     </section>
 
