Fixed: Typos in Namaste requirements

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -349,8 +349,8 @@
     <section id="object-conformance-declaration">
         <h2>Object Conformance Declaration</h2>
         <p>
-            The version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be an
-            file in the base directory of the <a>OCFL Storage Root</a> giving the OCFL version in the filename.
+            The version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be a
+            file in the base directory of the <a>OCFL Object Root</a> giving the OCFL version in the filename.
             The filename MUST conform to the pattern <code>T=dvalue</code>, where <code>T</code> MUST be 0, and
             <code>dvalue</code> MUST be <code>ocfl_object_</code>, followed by the OCFL specification version number.
             The text contents of the file MUST be the same as <code>dvalue</code>, followed by a newline
@@ -765,7 +765,7 @@
     <section id="root-conformance-declaration">
         <h2>Root Conformance Declaration</h2>
         <p>
-          The OCFL version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be an
+          The OCFL version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be a
           file in the base directory of the <a>OCFL Storage Root</a> giving the OCFL version in the filename.
           The filename MUST conform to the pattern <code>T=dvalue</code>, where <code>T</code> MUST be 0, and
           <code>dvalue</code> MUST be <code>ocfl_</code>, followed by the OCFL specification version number. The
