Fixed: Clarify that BagIt example is only one way
Fixes #266

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1003,7 +1003,7 @@
         <p>
             [[BagIt]] is a common file packaging specification, but unlike OCFL it does not provide a mechanism for
             content versioning. Using OCFL it is possible to store a BagIt structure with content versioning, such
-            that when the object state is resolved, it creates a valid BagIt 'bag'. This example will illustrate how
+            that when the object state is resolved, it creates a valid BagIt 'bag'. This example will illustrate one way
             this can be accomplished, using the <a href="https://tools.ietf.org/html/draft-kunze-bagit-17#section-4.1">
             example of a basic bag</a> given in the BagIt specification.
         </p>
