--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -399,7 +399,7 @@
             Every file within a version's <code>content</code> directory MUST be referenced in the
             <a href="#manifest">manifest</a> section of the inventory. There MUST NOT be empty directories within
             a version's <code>content</code> directory. A directory that would otherwise be empty MAY be maintained
-            by creating file within it named according to local conventions, for example by making an empty
+            by creating a file within it named according to local conventions, for example by making an empty
             <code>.keep</code> file.
         </p>
     </section>
