Add links to new path-separator clarify text
Related to: https://github.com/OCFL/spec/issues/219

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -486,9 +486,10 @@
             files has no significance.
         </p>
         <p>
-            The forward slash (/) path separator MUST be used in existing and logical file paths in the manifest,
-            fixity, and state blocks within the inventory. Implementations that target systems using other separators
-            will need to translate paths appropriately.
+            The forward slash (/) path separator MUST be used in existing and logical file paths in the
+            <a href="#manifest">manifest</a>, <a href="#fixity">fixity</a>, and <a href="#version">state</a> blocks
+            within the inventory. Implementations that target systems using other separators will need to translate
+            paths appropriately.
         </p>
         <blockquote class="informative">
             <p>
