--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -355,11 +355,12 @@
     <section id="object-conformance-declaration">
         <h2>Object Conformance Declaration</h2>
         <p>
-            The version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be an empty
-            file in the base directory of the object giving the OCFL Object version in the filename. The filename MUST
-            be constructed with a leading zero-equals (<code>0=</code>) string, the string <code>ocfl_object_</code>,
-            followed by the OCFL specification version number. For example <code>0=ocfl_object_1.0</code> for version
-            1.0 of this specification.
+            The version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be a
+            file in the base directory of the <a>OCFL Object Root</a> giving the OCFL version in the filename.
+            The filename MUST conform to the pattern <code>T=dvalue</code>, where <code>T</code> MUST be 0, and
+            <code>dvalue</code> MUST be <code>ocfl_object_</code>, followed by the OCFL specification version number.
+            The text contents of the file MUST be the same as <code>dvalue</code>, followed by a newline
+            (<code>\n</code>).
         </p>
     </section>
 
@@ -786,11 +787,11 @@
     <section id="root-conformance-declaration">
         <h2>Root Conformance Declaration</h2>
         <p>
-          The OCFL version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be an
-          empty file in the base directory of the <a>OCFL Storage Root</a> giving the OCFL version in the filename.
-          The filename MUST be constructed with a leading zero-equals (<code>0=</code>) string, the string
-          <code>ocfl_</code>, followed by the OCFL specification version number. For example <code>0=ocfl_1.0</code>
-          for version 1.0 of this specification.
+          The OCFL version declaration MUST be formatted according to the [[!NAMASTE]] specification. It MUST be a
+          file in the base directory of the <a>OCFL Storage Root</a> giving the OCFL version in the filename.
+          The filename MUST conform to the pattern <code>T=dvalue</code>, where <code>T</code> MUST be 0, and
+          <code>dvalue</code> MUST be <code>ocfl_</code>, followed by the OCFL specification version number. The
+          text contents of the file MUST be the same as <code>dvalue</code>, followed by a newline (<code>\n</code>).
         </p>
         <p>
           Root conformance indicates that the OCFL Storage Root conforms to this section (i.e. the OCFL Storage Root
